[package]
name = "yufa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
prettytable-rs = "^0.8"
grammar_struct_lib = { path = "grammar_struct_lib" }
ll1_praser = { path = "ll1_praser" }
lr1_praser = { path = "lr1_praser" }
